# language-util

./: .gitignore  Cargo.toml  LICENSE.md  README.md  readme.md
.github/workflows/: ci.yaml
crates/always/: Cargo.toml
crates/always/src/: convert.rs  lib.rs
crates/apply-changes/: Cargo.toml
crates/apply-changes/src/: lib.rs
crates/ast-ptr/: Cargo.toml
crates/ast-ptr/src/: lib.rs  raw.rs
crates/chain-map/: Cargo.toml
crates/chain-map/src/: lib.rs
crates/char-name/: Cargo.toml
crates/char-name/src/: lib.rs
crates/code-h2-md-map/: Cargo.toml
crates/code-h2-md-map/src/: lib.rs
crates/diagnostic/: Cargo.toml
crates/diagnostic-util/: Cargo.toml
crates/diagnostic-util/src/: lib.rs
crates/diagnostic/src/: lib.rs
crates/elapsed/: Cargo.toml
crates/elapsed/src/: lib.rs
crates/event-parse/: Cargo.toml
crates/event-parse/src/: lib.rs  rowan_sink.rs
crates/fast-hash/: Cargo.toml
crates/fast-hash/src/: lib.rs
crates/fmt-util/: Cargo.toml
crates/fmt-util/src/: lib.rs
crates/identifier-case/: Cargo.toml
crates/identifier-case/src/: lib.rs
crates/idx/: Cargo.toml
crates/idx/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/pattern-match/: Cargo.toml
crates/pattern-match-old/: Cargo.toml
crates/pattern-match-old/src/: lib.rs
crates/pattern-match/src/: alg.rs  lib.rs  matching.rs  matrix.rs  types.rs
crates/str-process/: Cargo.toml
crates/str-process/src/: lib.rs
crates/str-util/: Cargo.toml
crates/str-util/src/: lib.rs
crates/syntax-gen/: Cargo.toml
crates/syntax-gen/src/: alt.rs  ast.rs  identifier_case.rs  kind.rs  lib.rs  ptr.rs  seq.rs  token.rs  util.rs  write.rs
crates/text-pos/: Cargo.toml
crates/text-pos/src/: lib.rs  tests.rs
crates/text-size-util/: Cargo.toml
crates/text-size-util/src/: lib.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/topo-sort/: Cargo.toml
crates/topo-sort/src/: graph.rs  lib.rs  tests.rs
crates/uniq/: Cargo.toml
crates/uniq/src/: lib.rs
crates/unwrap-or/: Cargo.toml
crates/unwrap-or/src/: lib.rs
crates/uri-db/: Cargo.toml
crates/uri-db/src/: lib.rs
crates/write-rs-tokens/: Cargo.toml
crates/write-rs-tokens/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: help.txt  main.rs
