[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
drop_bomb = "0.1.5"
dunce = "1.0.4"
glob = "0.3.1"
line-index = "=0.1.0-pre.1"
log = "0.4.20"
nohash-hasher = "0.2"
prettyplease = "0.2.15"
proc-macro2 = "1.0.69"
quote = "1.0.33"
rowan = "0.15.13"
rustc-hash = "1.1.0"
smol_str = "0.2.0"
syn = "2.0.38"
text-size = "1.1.1"
ungrammar = "1.16.1"
