[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
rust_2018_idioms = "deny"
[workspace.lints.clippy]
pedantic = "deny"

[workspace.dependencies]
drop_bomb = "0.1.5"
dunce = "1.0.4"
line-index = "0.1.1"
log = "0.4.20"
nohash-hasher = "0.2.0"
prettyplease = "0.2.15"
proc-macro2 = "1.0.70"
quote = "1.0.33"
rowan = "0.15.15"
rustc-hash = "1.1.0"
smol_str = "0.2.0"
syn = "2.0.41"
text-size = "1.1.1"
ungrammar = "1.16.1"
