[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
rust_2018_idioms = "deny"
missing_debug_implementations = { level = "deny", priority = 1 }
missing_docs = { level = "deny", priority = 1 }
[workspace.lints.clippy]
pedantic = "deny"

[workspace.dependencies]
drop_bomb = "0.1.5"
line-index = "0.1.1"
log = "0.4.20"
nohash-hasher = "0.2.0"
prettyplease = "0.2.15"
proc-macro2 = "1.0.70"
quote = "1.0.33"
rowan = "0.16.1"
rustc-hash = "2.1.0"
smol_str = "0.3.2"
syn = "2.0.41"
text-size = "1.1.1"
ungrammar = "1.16.1"
