[package]
name = "event-parse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
doctest = false
test = false

[dependencies]
drop_bomb = "0.1"
token = { path = "../token" }
rowan = { git = "https://github.com/azdavis/rowan.git", optional = true }

[features]
default = ["rowan"]
