[package]
name = "event-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
test = false

[dependencies]
drop_bomb = "0.1.5"
rowan = { version = "0.15.11", optional = true }

token = { path = "../token" }

[features]
default = ["rowan"]
