[package]
name = "event-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
test = false

[lints]
workspace = true

[dependencies]
drop_bomb.workspace = true
rowan = { workspace = true, optional = true }

token.path = "../token"

[features]
default = ["rowan"]
