[package]
name = "paths"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
dunce = "1.0.4"
glob = "0.3.1"
nohash-hasher = "0.2"

fast-hash = { path = "../fast-hash" }
idx = { path = "../idx" }
str-util = { path = "../str-util" }
