[package]
name = "paths"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[lints]
workspace = true

[dependencies]
dunce.workspace = true
nohash-hasher.workspace = true

fast-hash.path = "../fast-hash"
idx.path = "../idx"
str-util.path = "../str-util"
