[package]
name = "syntax-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false

[dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
ungrammar.workspace = true

char-name.path = "../char-name"
fast-hash.path = "../fast-hash"
identifier-case.path = "../identifier-case"
