[package]
name = "syntax-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
ungrammar.workspace = true

char-name.path = "../char-name"
fast-hash.path = "../fast-hash"
identifier-case.path = "../identifier-case"
write-rs-tokens.path = "../write-rs-tokens"
